springboot-more details

--- a/boot3-02-demo/src/main/resources/application.properties
+++ b/boot3-02-demo/src/main/resources/application.properties
@@ -1,6 +1,28 @@
-cat.name=\u86CB\u86CB
-cat.age=1
+#cat.name=\u86CB\u86CB
+#cat.age=1
+#
+#sheep.name=\u8096\u6069
+#sheep.age=2
+#sheep.id=1231
+#
+#server.port=9999
+##\u914D\u7F6Eredis
+##spring.data.redis.url=
 
-sheep.name=\u8096\u6069
-sheep.age=2
-sheep.id=1231
+#properties\u8868\u793A\u590D\u6742\u5BF9\u8C61
+#person.age=20
+#person.name=\u4F59\u8212\u840D
+#person.like=false
+#person.child.name=\u9648\u5955\u4E50
+#person.child.age=17
+#person.child.birthday=2003/07/14
+#person.child.text[0]=abc
+#person.child.text[1]=def
+#person.dogs[0].name=\u5927\u9EC4
+#person.dogs[0].eating=true
+#person.dogs[1].name=\u5C0F\u80D6
+#person.dogs[1].eating=false
+#person.cats.c1.name=\u67D4\u67D4
+#person.cats.c1.age=8
+#person.cats.c2.name=\u4E1D\u4E1D
+#person.cats.c2.age=8
