--- a/boot3-03-logging/src/main/resources/application.properties
+++ b/boot3-03-logging/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 #logging
+#logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} %-5level [%thread] %logger{15} ===> %msg%n
+#\u9ED8\u8BA42023-09-25T21:53:11.584+08:00  INFO 70160 --- [           main] p.a.logging.Boot303LoggingApplication    : Started Boot303LoggingApplication in 1.142 seconds (process running for 1.596)
+#logging.pattern.dateformat=yyyy-MM-dd HH:mm:ss
+#\u53EA\u4FEE\u6539\u65F6\u95F4\u683C\u5F0F
+#2023-09-25 21:54:30  INFO 62836 --- [           main] o.apache.catalina.core.StandardService   : Starting service [Tomcat]
+logging.level.root=info
+
+logging.logback.rollingpolicy.file-name-pattern=${Log_FILE}.%d{yyyy-MM-dd}.%i.gz
+logging.logback.rollingpolicy.max-file-size=1MB
