some web negotiate

--- a/boot3-03-logging/src/main/resources/application.properties
+++ b/boot3-03-logging/src/main/resources/application.properties
@@ -4,7 +4,9 @@
 #logging.pattern.dateformat=yyyy-MM-dd HH:mm:ss
 #\u53EA\u4FEE\u6539\u65F6\u95F4\u683C\u5F0F
 #2023-09-25 21:54:30  INFO 62836 --- [           main] o.apache.catalina.core.StandardService   : Starting service [Tomcat]
-logging.level.root=info
+#logging.level.root=info
+#
+#logging.logback.rollingpolicy.file-name-pattern=${Log_FILE}.%d{yyyy-MM-dd}.%i.gz
+#logging.logback.rollingpolicy.max-file-size=1MB
 
-logging.logback.rollingpolicy.file-name-pattern=${Log_FILE}.%d{yyyy-MM-dd}.%i.gz
-logging.logback.rollingpolicy.max-file-size=1MB
+
