HttpMessageConverter usage example

--- a/boot3-04-web/pom.xml
+++ b/boot3-04-web/pom.xml
@@ -36,7 +36,11 @@
             <groupId>com.fasterxml.jackson.dataformat</groupId>
             <artifactId>jackson-dataformat-xml</artifactId>
         </dependency>
-
+<!--        支持返回yaml的格式-->
+        <dependency>
+            <groupId>com.fasterxml.jackson.dataformat</groupId>
+            <artifactId>jackson-dataformat-yaml</artifactId>
+        </dependency>
 
     </dependencies>
 
