--- a/boot3-04-web/src/main/resources/application.properties
+++ b/boot3-04-web/src/main/resources/application.properties
@@ -33,3 +33,6 @@ spring.mvc.pathmatch.matching-strategy=path_pattern_parser
 spring.mvc.contentnegotiation.favor-parameter=true
 #\u4FEE\u6539\u8BF7\u6C42\u53C2\u6570\u7684\u5185\u5BB9\u534F\u5546\u7684\u53C2\u6570 \u4FEE\u6539\u4E3Atype
 spring.mvc.contentnegotiation.parameter-name=type
+
+#\u6DFB\u52A0yaml\u5185\u5BB9\u7C7B\u578B
+spring.mvc.contentnegotiation.media-types.yaml=application/yaml
