--- a/boot3-04-web/src/main/resources/application.properties
+++ b/boot3-04-web/src/main/resources/application.properties
@@ -35,4 +35,20 @@ spring.mvc.contentnegotiation.favor-parameter=true
 spring.mvc.contentnegotiation.parameter-name=type
 
 #\u6DFB\u52A0yaml\u5185\u5BB9\u7C7B\u578B
-spring.mvc.contentnegotiation.media-types.yaml=application/yaml
+spring.mvc.contentnegotiation.media-types.yaml=text/yaml
+
+#spring.thymeleaf
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
+
+#\u5F00\u53D1\u671F\u95F4\u5173\u95ED\uFF0C\u4E0A\u7EBF\u4EE5\u540E\u5F00\u542F
+spring.thymeleaf.cache=false
+
+#\u6A21\u677F\u6E32\u67D3\u4E4B\u524D\u662F\u5426\u68C0\u67E5\u6A21\u677F\u662F\u5426\u5B58\u5728,\u9ED8\u8BA4\u5F00\u542F
+spring.thymeleaf.check-template=true
+
+#\u8FD8\u53EF\u4EE5\u4FEE\u6539\u56FD\u9645\u5316\u7684\u4E00\u4E9B\u914D\u7F6E\uFF0C\u50CF\u57FA\u7840\u8BFB\u53D6\u7684\u6587\u4EF6\u540D
+#\u50CF\u8FD9\u91CC\u9ED8\u8BA4\u662Fmessages
+spring.messages.basename=messages
+#\u8FD8\u53EF\u4EE5\u4FEE\u6539\u5B57\u7B26\u683C\u5F0F
+spring.messages.encoding=UTF-8
