--- a/boot3-04-web/src/main/resources/application.properties
+++ b/boot3-04-web/src/main/resources/application.properties
@@ -37,6 +37,9 @@ spring.mvc.contentnegotiation.parameter-name=type
 #\u6DFB\u52A0yaml\u5185\u5BB9\u7C7B\u578B
 spring.mvc.contentnegotiation.media-types.yaml=text/yaml
 
+#\u914D\u7F6Ejsp\u8DF3\u8F6C\u7684\u8DEF\u5F84\u524D\u540E\u7F00\uFF08jsp\u4E0D\u5E38\u7528\uFF0Cout\u4E86)
+#spring.mvc.view.prefix=/
+
 #spring.thymeleaf
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
@@ -52,3 +55,10 @@ spring.thymeleaf.check-template=true
 spring.messages.basename=messages
 #\u8FD8\u53EF\u4EE5\u4FEE\u6539\u5B57\u7B26\u683C\u5F0F
 spring.messages.encoding=UTF-8
+
+#problemdetails \u529F\u80FD\u9ED8\u8BA4\u662F\u5173\u95ED\u7684
+spring.mvc.problemdetails.enabled=true
+
+
+#\u81EA\u5B9A\u4E49banner
+spring.banner.location=classpath:banner.txt
